be a fix for the question alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body   {
 #questions {
   padding-top: 29%;
   margin-right: 20%;
-  text-align: center;
+  text-align: left;
 }
 
 .output {
